(Forgot something last time) The footer text is hidden for now, until we fix the bug where it overlaps other text.
git-svn-id: https://research-cs194.googlecode.com/svn/trunk/research@218 3207efe2-bddd-11de-9616-7b1d4728551e

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -137,6 +137,9 @@ width: 100%;
 }
 
 #footer_inside{
+	/* hide the footer for now */
+	display: none;
+
 	color: gray;
 	text-align: center;
 	height: 40px;
